--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ scikit-learn = "1.1.1"
 jupyter = "^1.0.0"
 pandas-profiling = "^3.6.6"
 plotly = "^5.14.1"
+imbalanced-learn = "^0.10.1"
 
 [build-system]
 requires = ["poetry-core"]
